<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_craft">

    <fragment
        android:id="@+id/navigation_craft"
        android:name="com.brunodalarosa.beartisan.ui.home.HomeFragment"
        android:label="@string/bottom_nav_craft"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_sell"
        android:name="com.brunodalarosa.beartisan.ui.dashboard.DashboardFragment"
        android:label="@string/bottom_nav_sell"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_manage"
        android:name="com.brunodalarosa.beartisan.ui.notifications.NotificationsFragment"
        android:label="@string/bottom_nav_manage"
        tools:layout="@layout/fragment_notifications" />
</navigation>