<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:background="@android:color/transparent"
            android:padding="10dp"
            android:src="@drawable/ic_baseline_arrow_back_24"
            app:layout_constraintBottom_toBottomOf="@id/tv_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_title" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_vertical_m"
            android:text="@string/new_product_title"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.BeArtisan.Headline5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/product_name_hint"
            app:counterEnabled="true"
            app:counterMaxLength="99"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_description"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/product_description_hint"
            android:minHeight="@dimen/input_desc_min_height"
            app:helperText="you can add a short description of the product here"
            app:helperTextTextAppearance="@style/TextAppearance.BeArtisan.Caption"
            app:layout_constraintTop_toBottomOf="@id/input_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:minHeight="@dimen/input_desc_min_height"
                android:textSize="13sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_price"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:minWidth="@dimen/input_price_min_width"
            app:layout_constraintStart_toEndOf="@id/tv_price_title"
            app:layout_constraintTop_toBottomOf="@id/input_description">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:minWidth="@dimen/input_price_min_width" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_price_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/product_price_title"
            android:textAppearance="@style/TextAppearance.BeArtisan.Headline6"
            app:layout_constraintBottom_toBottomOf="@id/input_price"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/input_price" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_stock"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:minWidth="@dimen/input_price_min_width"
            app:layout_constraintStart_toEndOf="@id/tv_price_title"
            app:layout_constraintTop_toBottomOf="@id/input_price">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_stock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberSigned"
                android:minWidth="@dimen/input_price_min_width" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_stock_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/product_stock_title"
            android:textAppearance="@style/TextAppearance.BeArtisan.Headline6"
            app:layout_constraintBottom_toBottomOf="@id/input_stock"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/input_stock" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/margin_vertical_m"
            android:includeFontPadding="false"
            android:text="@string/general_save"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.BeArtisan.Headline6"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>